feat: Update dependencies and enhance NLP backend capabilities
- Added new dependencies: @effect/ai, @effect/ai-anthropic, and @effect/ai-google to support advanced AI functionalities.
- Refactored BackendNotSupported error handling in NLPBackend to allow optional messages.
- Improved code readability in NLPService and Composition backends by consolidating function definitions and import statements.
- Updated tests to ensure compatibility with new backend features and improved error handling.

This commit enhances the NLP service's capabilities and maintains code quality through refactoring and dependency updates.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "@effect-atom/atom-react": "^0.4.0",
+    "@effect/ai": "^0.32.1",
+    "@effect/ai-anthropic": "^0.22.0",
+    "@effect/ai-google": "^0.11.0",
     "@effect/printer": "^0.47.0",
     "@effect/printer-ansi": "^0.47.0",
     "@effect/typeclass": "^0.38.0",
